# serve

./: .gitignore  Cargo.toml  README.md  build.ps1  dev.ps1  publish.ps1  run.ps1
.github/workflows/: release.yml
app/: .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.module.scss  App.tsx  index.html  index.scss  main.tsx  tsconfig.json
app/src/components/Breadcrumbs/: Breadcrumbs.module.scss  Breadcrumbs.tsx
app/src/components/Button/: Button.module.scss  Button.tsx
app/src/components/ConfirmModal/: ConfirmModal.module.scss  ConfirmModal.tsx
app/src/components/ContextMenu/: ContextMenu.module.scss  ContextMenu.tsx
app/src/components/Dialog/: Dialog.module.scss  Dialog.tsx
app/src/components/DirEntry/: DirEntry.module.scss  DirEntry.tsx
app/src/components/DirView/: DirView.module.scss  DirView.tsx  Navigation.module.scss  Navigation.tsx
app/src/components/ErrorToast/: ErrorToast.tsx
app/src/components/FileIcon/: FileIcon.tsx
app/src/components/InfoModal/: InfoModal.module.scss  InfoModal.tsx
app/src/components/ModalManager/: ModalManager.tsx
app/src/components/QRCodeDialog/: QRCodeDialog.module.scss  QRCodeDialog.tsx
app/src/components/RenameModal/: RenameModal.tsx
app/src/components/Toast/: Toast.tsx  (+1 more)
app/src/contexts/: App.context.ts  Modal.context.ts  ModalService.context.tsx  Navigation.context.tsx  Settings.context.ts  Toast.context.tsx  ToastService.context.tsx
app/src/hooks/: useAppContext.ts  useDialog.ts  useDropTarget.ts  useFileActions.ts  useModalContext.ts  useModalService.ts  useNavigation.ts  useSettings.ts  useToastContext.ts  useToastService.ts
app/src/services/: api.ts
app/src/styles/: common.module.scss  icons.scss  mixins.scss
app/src/types/: file-icons.d.ts
app/src/util/: classes.ts  models.ts  result.ts  util.ts
assets/: index.html
src/: args.rs  assets.rs  auth.rs  color.rs  handlers.rs  lib.rs  models.rs  qrcode.rs  server.rs  state.rs  update.rs  updater.rs  utils.rs
src/routes/: create_folder.rs  download.rs  download_folder.rs  file_ops.rs  get_dir.rs  get_embedded_file.rs  get_entry_properties.rs  get_qrcode.rs  mod.rs  settings.rs  upload.rs
src/util/: dir.rs  mod.rs  path.rs  zip.rs
(+11 files in other folders)
