[package]
name = "nlfmt-serve"
version = "0.2.0"
description = "quickly serve files from a directory in your local network"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/nlfmt/serve"
repository = "https://github.com/nlfmt/serve"
edition = "2021"
keywords = ["serve", "file-server"]
categories = ["command-line-utilities"]

[[bin]]
name = "serve"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
local-ip-address = "0.6.3"
mime_guess = "2.0.5"
qrcode-generator = "5.0.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket-multipart-form-data = "0.10.7"
rocket_cors = "0.6.0"
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
walkdir = "2.5.0"
zip = "2.4.2"
